Added Basic Statistics Views and Fragments. Change grade build tool version to 18.0.1

--- a/MKLApp/src/main/res/values/arrays.xml
+++ b/MKLApp/src/main/res/values/arrays.xml
@@ -4,7 +4,7 @@
 
         <item>Statistics</item>
         <item>Standings</item>
-        <item>Schedule</item>
+        <item>Games</item>
         <item>Teams</item>
         <item>Players</item>
         <item>Awards</item>
