--- a/MKLApp/src/main/res/layout/fragment_game.xml
+++ b/MKLApp/src/main/res/layout/fragment_game.xml
@@ -27,11 +27,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="0  -  0"
                 android:id="@+id/game_score"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="25dp"/>
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:id="@+id/game_date"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"/>
+
 
     </RelativeLayout>
 </RelativeLayout>
