Fix up stats entry layout
Added Padding layouts

Added News to drawer

--- a/MKLApp/src/main/res/values/arrays.xml
+++ b/MKLApp/src/main/res/values/arrays.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="menu_array">
-
+        <item>News</item>
         <item>Statistics</item>
         <item>Standings</item>
         <item>Games</item>
